fix: correct font styling and spacing in mobile devices

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,7 +3,7 @@
   padding: 36px;
   border-radius: 10px;
   width: 430px;
-  min-height: 330px;
+  /* min-height: 330px; */
   display: flex;
   flex-direction: column;
   color: #000000;
