--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,6 +1,4 @@
 .popup__form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  flex: 1;
 }
