--- a/blocks/popup/__header/popup__header.css
+++ b/blocks/popup/__header/popup__header.css
@@ -3,11 +3,13 @@
   font-weight: 900;
   line-height: 29px;
   margin: 0;
-  /* margin-bottom: 20px; */
+  padding-bottom: 48px;
 }
 
 @media (max-width: 480px) {
   .popup__header {
-    margin-bottom: 76px;
+    padding-bottom: 68px;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
