--- a/blocks/popup/__input-container/popup__input-container.css
+++ b/blocks/popup/__input-container/popup__input-container.css
@@ -3,4 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  padding-bottom: 48px;
+}
+
+@media (max-width: 480px) {
+  .popup__input-container {
+    padding-bottom: 46px;
+  }
 }
