--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -13,3 +13,10 @@
 .popup__save-button:hover {
   opacity: .8;
 }
+
+@media (max-width: 480px) {
+  .popup__save-button {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
